@@ -1,3 +1,8 @@
+2008-02-10  Pat Thoyts <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Switch to use of the digest version of the
+	jabberl:iq:auth authentication protocol.
+
 2008-01-27  Pat Thoyts <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Fixed the userinfo to retrieve the users
